feat(webhook): validate rollout apis

--- a/config/crd/bases/rollout.kusionstack.io_rollouts.yaml
+++ b/config/crd/bases/rollout.kusionstack.io_rollouts.yaml
@@ -53,6 +53,7 @@ spec:
                   type: string
                 type: array
               triggerPolicy:
+                default: Auto
                 description: TriggerPolicy defines when rollout will be triggered
                 type: string
               workloadRef:
