--- a/config/crd/bases/rollout.kusionstack.io_rolloutstrategies.yaml
+++ b/config/crd/bases/rollout.kusionstack.io_rolloutstrategies.yaml
@@ -515,11 +515,14 @@ spec:
                       format: byte
                       type: string
                     periodSeconds:
+                      default: 10
                       description: How often (in seconds) to perform the probe. Default to 10 seconds. Minimum value is 1.
                       format: int32
+                      minimum: 1
                       type: integer
                     timeoutSeconds:
-                      description: TimeoutSeconds specifies the timeout for this webhook. After the timeout passes, the webhook call will be ignored or the API call will fail based on the failure policy. Default to 10 seconds.
+                      default: 10
+                      description: TimeoutSeconds specifies the timeout for this webhook. After the timeout passes, the webhook call will be ignored or the API call will fail based on the failure policy.
                       format: int32
                       type: integer
                     url:
@@ -530,8 +533,10 @@ spec:
                   description: FailurePolicy defines how unrecognized errors from the admission endpoint are handled - allowed values are Ignore or Fail. Defaults to Ignore.
                   type: string
                 failureThreshold:
+                  default: 3
                   description: Minimum consecutive failures for the probe to be considered failed after having succeeded. Defaults to 3. Minimum value is 1.
                   format: int32
+                  minimum: 1
                   type: integer
                 hookTypes:
                   description: HookTypes defines when to communicate with the hook, specifies the types of events that trigger the webhook. Required
