feat: upgrade go toolchain version to go1.21

--- a/config/crd/bases/rollout.kusionstack.io_traffictopologies.yaml
+++ b/config/crd/bases/rollout.kusionstack.io_traffictopologies.yaml
@@ -1,11 +1,9 @@
-
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.5.0
-  creationTimestamp: null
+    controller-gen.kubebuilder.io/version: v0.14.0
   name: traffictopologies.rollout.kusionstack.io
 spec:
   group: rollout.kusionstack.io
@@ -21,13 +19,24 @@ spec:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: TrafficTopologies defines the networking traffic relationships between workloads, backend services, and routes.
+        description: |-
+          TrafficTopologies defines the networking traffic relationships between
+          workloads, backend services, and routes.
         properties:
           apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            description: |-
+              APIVersion defines the versioned schema of this representation of an object.
+              Servers should convert recognized schemas to the latest internal value, and
+              may reject unrecognized values.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
             type: string
           kind:
-            description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            description: |-
+              Kind is a string value representing the REST resource this object represents.
+              Servers may infer this from the endpoint the client submits requests to.
+              Cannot be updated.
+              In CamelCase.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
             type: string
           metadata:
             type: object
@@ -39,11 +48,31 @@ spec:
                 properties:
                   apiVersion:
                     default: v1
-                    description: Group is the group of the referent. For example, "gateway.networking.k8s.io". When unspecified or empty string, core API group is inferred.
+                    description: |-
+                      Group is the group of the referent. For example, "gateway.networking.k8s.io".
+                      When unspecified or empty string, core API group is inferred.
                     type: string
                   kind:
                     default: Service
-                    description: "Kind is the Kubernetes resource kind of the referent. For example \"Service\". \n Defaults to \"Service\" when not specified. \n ExternalName services can refer to CNAME DNS records that may live outside of the cluster and as such are difficult to reason about in terms of conformance. They also may not be safe to forward to (see CVE-2021-25740 for more information). Implementations SHOULD NOT support ExternalName Services. \n Support: Core (Services with a type other than ExternalName) \n Support: Implementation-specific (Services with type ExternalName)"
+                    description: |-
+                      Kind is the Kubernetes resource kind of the referent. For example
+                      "Service".
+
+
+                      Defaults to "Service" when not specified.
+
+
+                      ExternalName services can refer to CNAME DNS records that may live
+                      outside of the cluster and as such are difficult to reason about in
+                      terms of conformance. They also may not be safe to forward to (see
+                      CVE-2021-25740 for more information). Implementations SHOULD NOT
+                      support ExternalName Services.
+
+
+                      Support: Core (Services with a type other than ExternalName)
+
+
+                      Support: Implementation-specific (Services with type ExternalName)
                     type: string
                   name:
                     description: Name is the name of the referent.
@@ -57,11 +86,20 @@ spec:
                   properties:
                     apiVersion:
                       default: gateway.networking.k8s.io/v1
-                      description: "APIVersion is the group/version of the referent. For example, \"gateway.networking.k8s.io/v1\". \n Defaults to \"gateway.networking.k8s.io/v1\" when not specified."
+                      description: |-
+                        APIVersion is the group/version of the referent. For example, "gateway.networking.k8s.io/v1".
+
+
+                        Defaults to "gateway.networking.k8s.io/v1" when not specified.
                       type: string
                     kind:
                       default: HTTPRoute
-                      description: "Kind is the Kubernetes resource kind of the referent. For example \"HTTPRoute\". \n Defaults to \"HTTPRoute\" when not specified."
+                      description: |-
+                        Kind is the Kubernetes resource kind of the referent. For example
+                        "HTTPRoute".
+
+
+                        Defaults to "HTTPRoute" when not specified.
                       type: string
                     name:
                       description: Name is the name of the custom route.
@@ -77,18 +115,23 @@ spec:
                 description: WorkloadRef is the reference to a kind of workloads
                 properties:
                   apiVersion:
-                    description: APIVersion is the group/version for the resource being referenced. If APIVersion is not specified, the specified Kind must be in the core API group. For any other third-party types, APIVersion is required.
+                    description: |-
+                      APIVersion is the group/version for the resource being referenced.
+                      If APIVersion is not specified, the specified Kind must be in the core API group.
+                      For any other third-party types, APIVersion is required.
                     type: string
                   kind:
                     description: Kind is the type of resource being referenced
                     type: string
                   match:
-                    description: Match indicates how to match workloads. only one workload should be matches in one cluster
+                    description: Match indicates how to match workloads. only one
+                      workload should be matches in one cluster
                     properties:
                       names:
                         description: Names is a list of workload name
                         items:
-                          description: CrossClusterObjectNameReference contains cluster and name reference to a k8s object
+                          description: CrossClusterObjectNameReference contains cluster
+                            and name reference to a k8s object
                           properties:
                             cluster:
                               description: Cluster indicates the name of cluster
@@ -101,21 +144,32 @@ spec:
                           type: object
                         type: array
                       selector:
-                        description: Selector is a label query over a set of resources, in this case resource
+                        description: Selector is a label query over a set of resources,
+                          in this case resource
                         properties:
                           matchExpressions:
-                            description: matchExpressions is a list of label selector requirements. The requirements are ANDed.
+                            description: matchExpressions is a list of label selector
+                              requirements. The requirements are ANDed.
                             items:
-                              description: A label selector requirement is a selector that contains values, a key, and an operator that relates the key and values.
+                              description: |-
+                                A label selector requirement is a selector that contains values, a key, and an operator that
+                                relates the key and values.
                               properties:
                                 key:
-                                  description: key is the label key that the selector applies to.
+                                  description: key is the label key that the selector
+                                    applies to.
                                   type: string
                                 operator:
-                                  description: operator represents a key's relationship to a set of values. Valid operators are In, NotIn, Exists and DoesNotExist.
+                                  description: |-
+                                    operator represents a key's relationship to a set of values.
+                                    Valid operators are In, NotIn, Exists and DoesNotExist.
                                   type: string
                                 values:
-                                  description: values is an array of string values. If the operator is In or NotIn, the values array must be non-empty. If the operator is Exists or DoesNotExist, the values array must be empty. This array is replaced during a strategic merge patch.
+                                  description: |-
+                                    values is an array of string values. If the operator is In or NotIn,
+                                    the values array must be non-empty. If the operator is Exists or DoesNotExist,
+                                    the values array must be empty. This array is replaced during a strategic
+                                    merge patch.
                                   items:
                                     type: string
                                   type: array
@@ -127,9 +181,13 @@ spec:
                           matchLabels:
                             additionalProperties:
                               type: string
-                            description: matchLabels is a map of {key,value} pairs. A single {key,value} in the matchLabels map is equivalent to an element of matchExpressions, whose key field is "key", the operator is "In", and the values array contains only "value". The requirements are ANDed.
+                            description: |-
+                              matchLabels is a map of {key,value} pairs. A single {key,value} in the matchLabels
+                              map is equivalent to an element of matchExpressions, whose key field is "key", the
+                              operator is "In", and the values array contains only "value". The requirements are ANDed.
                             type: object
                         type: object
+                        x-kubernetes-map-type: atomic
                     type: object
                 required:
                 - kind
@@ -145,10 +203,13 @@ spec:
               conditions:
                 description: Conditions is the list of conditions
                 items:
-                  description: 'Condition defines the condition of a resource See: https://github.com/kubernetes/community/blob/master/contributors/devel/sig-architecture/api-conventions.md#typical-status-properties'
+                  description: |-
+                    Condition defines the condition of a resource
+                    See: https://github.com/kubernetes/community/blob/master/contributors/devel/sig-architecture/api-conventions.md#typical-status-properties
                   properties:
                     lastTransitionTime:
-                      description: Last time the condition transitioned from one status to another.
+                      description: Last time the condition transitioned from one status
+                        to another.
                       format: date-time
                       type: string
                     lastUpdateTime:
@@ -156,7 +217,8 @@ spec:
                       format: date-time
                       type: string
                     message:
-                      description: A human-readable message indicating details about the transition.
+                      description: A human-readable message indicating details about
+                        the transition.
                       type: string
                     reason:
                       description: The reason for the condition's last transition.
@@ -181,7 +243,9 @@ spec:
                 items:
                   properties:
                     backendRoutingName:
-                      description: backend routing reference The name of the backendRouting referent
+                      description: |-
+                        backend routing reference
+                        The name of the backendRouting referent
                       type: string
                     workloadRef:
                       description: workload reference name and cluster
@@ -203,9 +267,3 @@ spec:
     storage: true
     subresources:
       status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
