--- a/config/crd/bases/rollout.kusionstack.io_rollouts.yaml
+++ b/config/crd/bases/rollout.kusionstack.io_rollouts.yaml
@@ -1,11 +1,9 @@
-
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.5.0
-  creationTimestamp: null
+    controller-gen.kubebuilder.io/version: v0.14.0
   name: rollouts.rollout.kusionstack.io
 spec:
   group: rollout.kusionstack.io
@@ -31,10 +29,19 @@ spec:
         description: Rollout is the Schema for the rollouts API
         properties:
           apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            description: |-
+              APIVersion defines the versioned schema of this representation of an object.
+              Servers should convert recognized schemas to the latest internal value, and
+              may reject unrecognized values.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
             type: string
           kind:
-            description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            description: |-
+              Kind is a string value representing the REST resource this object represents.
+              Servers may infer this from the endpoint the client submits requests to.
+              Cannot be updated.
+              In CamelCase.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
             type: string
           metadata:
             type: object
@@ -42,18 +49,26 @@ spec:
             description: RolloutSpec defines the desired state of Rollout
             properties:
               disabled:
-                description: Disabled means that rollout will not response for new event. Default value is false.
+                description: |-
+                  Disabled means that rollout will not response for new event.
+                  Default value is false.
                 type: boolean
               historyLimit:
                 default: 10
-                description: HistoryLimit defines the maximum number of completed rolloutRun history records to keep. The HistoryLimit can start from 0 (no retained RolloutRun history). When set to math.MaxInt32, the Rollout will keep all RolloutRun history records.
+                description: |-
+                  HistoryLimit defines the maximum number of completed rolloutRun
+                  history records to keep.
+                  The HistoryLimit can start from 0 (no retained RolloutRun history).
+                  When not set or set to math.MaxInt32, the Rollout will keep all RolloutRun history records.
                 format: int32
                 type: integer
               strategyRef:
                 description: StrategyRef is the reference to the rollout strategy
                 type: string
               trafficTopologyRefs:
-                description: TrafficTopologyRefs defines the networking traffic relationships between workloads, backend services, and routes.
+                description: |-
+                  TrafficTopologyRefs defines the networking traffic relationships between
+                  workloads, backend services, and routes.
                 items:
                   type: string
                 type: array
@@ -65,18 +80,23 @@ spec:
                 description: WorkloadRef is a reference to a kind of workloads
                 properties:
                   apiVersion:
-                    description: APIVersion is the group/version for the resource being referenced. If APIVersion is not specified, the specified Kind must be in the core API group. For any other third-party types, APIVersion is required.
+                    description: |-
+                      APIVersion is the group/version for the resource being referenced.
+                      If APIVersion is not specified, the specified Kind must be in the core API group.
+                      For any other third-party types, APIVersion is required.
                     type: string
                   kind:
                     description: Kind is the type of resource being referenced
                     type: string
                   match:
-                    description: Match indicates how to match workloads. only one workload should be matches in one cluster
+                    description: Match indicates how to match workloads. only one
+                      workload should be matches in one cluster
                     properties:
                       names:
                         description: Names is a list of workload name
                         items:
-                          description: CrossClusterObjectNameReference contains cluster and name reference to a k8s object
+                          description: CrossClusterObjectNameReference contains cluster
+                            and name reference to a k8s object
                           properties:
                             cluster:
                               description: Cluster indicates the name of cluster
@@ -89,21 +109,32 @@ spec:
                           type: object
                         type: array
                       selector:
-                        description: Selector is a label query over a set of resources, in this case resource
+                        description: Selector is a label query over a set of resources,
+                          in this case resource
                         properties:
                           matchExpressions:
-                            description: matchExpressions is a list of label selector requirements. The requirements are ANDed.
+                            description: matchExpressions is a list of label selector
+                              requirements. The requirements are ANDed.
                             items:
-                              description: A label selector requirement is a selector that contains values, a key, and an operator that relates the key and values.
+                              description: |-
+                                A label selector requirement is a selector that contains values, a key, and an operator that
+                                relates the key and values.
                               properties:
                                 key:
-                                  description: key is the label key that the selector applies to.
+                                  description: key is the label key that the selector
+                                    applies to.
                                   type: string
                                 operator:
-                                  description: operator represents a key's relationship to a set of values. Valid operators are In, NotIn, Exists and DoesNotExist.
+                                  description: |-
+                                    operator represents a key's relationship to a set of values.
+                                    Valid operators are In, NotIn, Exists and DoesNotExist.
                                   type: string
                                 values:
-                                  description: values is an array of string values. If the operator is In or NotIn, the values array must be non-empty. If the operator is Exists or DoesNotExist, the values array must be empty. This array is replaced during a strategic merge patch.
+                                  description: |-
+                                    values is an array of string values. If the operator is In or NotIn,
+                                    the values array must be non-empty. If the operator is Exists or DoesNotExist,
+                                    the values array must be empty. This array is replaced during a strategic
+                                    merge patch.
                                   items:
                                     type: string
                                   type: array
@@ -115,9 +146,13 @@ spec:
                           matchLabels:
                             additionalProperties:
                               type: string
-                            description: matchLabels is a map of {key,value} pairs. A single {key,value} in the matchLabels map is equivalent to an element of matchExpressions, whose key field is "key", the operator is "In", and the values array contains only "value". The requirements are ANDed.
+                            description: |-
+                              matchLabels is a map of {key,value} pairs. A single {key,value} in the matchLabels
+                              map is equivalent to an element of matchExpressions, whose key field is "key", the
+                              operator is "In", and the values array contains only "value". The requirements are ANDed.
                             type: object
                         type: object
+                        x-kubernetes-map-type: atomic
                     type: object
                 required:
                 - kind
@@ -130,10 +165,13 @@ spec:
               conditions:
                 description: Conditions is the list of conditions
                 items:
-                  description: 'Condition defines the condition of a resource See: https://github.com/kubernetes/community/blob/master/contributors/devel/sig-architecture/api-conventions.md#typical-status-properties'
+                  description: |-
+                    Condition defines the condition of a resource
+                    See: https://github.com/kubernetes/community/blob/master/contributors/devel/sig-architecture/api-conventions.md#typical-status-properties
                   properties:
                     lastTransitionTime:
-                      description: Last time the condition transitioned from one status to another.
+                      description: Last time the condition transitioned from one status
+                        to another.
                       format: date-time
                       type: string
                     lastUpdateTime:
@@ -141,7 +179,8 @@ spec:
                       format: date-time
                       type: string
                     message:
-                      description: A human-readable message indicating details about the transition.
+                      description: A human-readable message indicating details about
+                        the transition.
                       type: string
                     reason:
                       description: The reason for the condition's last transition.
@@ -162,7 +201,9 @@ spec:
                 format: date-time
                 type: string
               observedGeneration:
-                description: ObservedGeneration is the most recent generation observed for this Rollout. It corresponds to the Rollout's generation, which is updated on mutation by the API Server.
+                description: |-
+                  ObservedGeneration is the most recent generation observed for this Rollout. It corresponds to the
+                  Rollout's generation, which is updated on mutation by the API Server.
                 format: int64
                 type: integer
               phase:
@@ -177,9 +218,3 @@ spec:
     storage: true
     subresources:
       status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
