--- a/config/crd/bases/rollout.kusionstack.io_traffictopologies.yaml
+++ b/config/crd/bases/rollout.kusionstack.io_traffictopologies.yaml
@@ -16,7 +16,24 @@ spec:
     singular: traffictopology
   scope: Namespaced
   versions:
-  - name: v1alpha1
+  - additionalPrinterColumns:
+    - jsonPath: .spec.trafficType
+      name: TYPE
+      type: string
+    - jsonPath: .spec.backend.name
+      name: SERVICE
+      type: string
+    - jsonPath: .spec.routes[*].name
+      name: Routes
+      type: string
+    - jsonPath: .status.topologies[*].backendRoutingName
+      name: BACKEND_ROUTINGS
+      type: string
+    - format: date-time
+      jsonPath: .metadata.creationTimestamp
+      name: AGE
+      type: date
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         description: |-
