--- a/config/kind/webhook/outcluster/kustomization.yaml
+++ b/config/kind/webhook/outcluster/kustomization.yaml
@@ -4,23 +4,66 @@ kind: Kustomization
 resources:
 - ../../../webhook
 
+configMapGenerator:
+- name: webhook-hosts
+  envs:
+  - webhook-hosts.env
+  options:
+    disableNameSuffixHash: true
+
 patches:
 - patch: |-
     - op: replace
       path: /webhooks/0/clientConfig
-      value: {"url": "https://host.docker.internal:9443/webhooks/validating/rolloutrun"}
+      value: {"url": "https://host.docker.internal:9443"}
     - op: replace
       path: /webhooks/1/clientConfig
-      value: {"url": "https://host.docker.internal:9443/webhooks/validating/rollout"}
+      value: {"url": "https://host.docker.internal:9443"}
     - op: replace
       path: /webhooks/2/clientConfig
-      value: {"url": "https://host.docker.internal:9443/webhooks/validating/rolloutstrategy"}
+      value: {"url": "https://host.docker.internal:9443"}
     - op: replace
       path: /webhooks/3/clientConfig
-      value: {"url": "https://host.docker.internal:9443/webhooks/validating/traffictopology"}
+      value: {"url": "https://host.docker.internal:9443"}
   target:
     kind: ValidatingWebhookConfiguration
 - path: delete-svc.yaml
 - path: delete-mutating.yaml
 
-
+replacements:
+- source:
+    kind: ConfigMap
+    name: webhook-hosts
+    fieldPath: data.rollout
+  targets:
+  - select:
+      kind: ValidatingWebhookConfiguration
+    fieldPaths:
+    - webhooks.[name=rollouts.rollout.kusionstack.io].clientConfig.url
+- source:
+    kind: ConfigMap
+    name: webhook-hosts
+    fieldPath: data.rolloutrun
+  targets:
+  - select:
+      kind: ValidatingWebhookConfiguration
+    fieldPaths:
+    - webhooks.[name=rolloutruns.rollout.kusionstack.io].clientConfig.url
+- source:
+    kind: ConfigMap
+    name: webhook-hosts
+    fieldPath: data.rolloutstrategy
+  targets:
+  - select:
+      kind: ValidatingWebhookConfiguration
+    fieldPaths:
+    - webhooks.[name=rolloutstrategies.rollout.kusionstack.io].clientConfig.url
+- source:
+    kind: ConfigMap
+    name: webhook-hosts
+    fieldPath: data.traffictopology
+  targets:
+  - select:
+      kind: ValidatingWebhookConfiguration
+    fieldPaths:
+    - webhooks.[name=traffictopologies.rollout.kusionstack.io].clientConfig.url
