--- a/config/kind/webhook/outcluster/patches/webhook.yaml
+++ b/config/kind/webhook/outcluster/patches/webhook.yaml
@@ -1,5 +1,7 @@
-$patch: delete
 apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
   name: kusionstack-rollout-mutating
+webhooks:
+- failurePolicy: Ignore
+  name: statefulset.apps.k8s.io
