--- a/config/kind/controller/kustomization.yaml
+++ b/config/kind/controller/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: rollout-system
+namespace: kusionstack-rollout
 
 labels:
 - includeSelectors: true
