--- a/config/kind/prerequisite/clusterrole.yaml
+++ b/config/kind/prerequisite/clusterrole.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: rollout-system-admin
+  name: kusionstack-rollout-admin
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -9,4 +9,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: default
-  namespace: rollout-system
+  namespace: kusionstack-rollout
