--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -17,6 +17,44 @@ rules:
   - update
   - watch
 - apiGroups:
+  - apps.kusionstack.io
+  resources:
+  - collasets
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - apps.kusionstack.io
+  resources:
+  - swarms
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - apps.kusionstack.io
+  resources:
+  - swarms/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - apps.kusionstack.io
+  resources:
+  - swarms/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
   - networking.k8s.io
   resources:
   - ingresses
